# teleforward

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  config.example.yml  config.yml  docker-compose.yml  script.sh
.github/actions/: build-with-registry.yml  build-with-tar.yml
.github/actions/build-with-registry/: action.yml
.github/actions/build-with-tar/: action.yml
.github/actions/start-app/: action.yml
.github/workflows/: .build.yml  auth-code-command.yml  auth-command.yml  build-and-deploy.yml  input_auth_token.yml  slash-commands-dispatch.yml
docker/: app.dockerfile  base.dockerfile
src/: main.rs
