[package]
name = "teleforward"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "4.4.8"
env_logger = "0.10.1"
log = "0.4.20"
rust-tdlib = {git = "https://github.com/antonio-antuan/rust-tdlib", branch = "1.8.21"}
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9.27"

[dependencies.tokio]
version = "1"
features = [
    "macros",
    "rt-multi-thread",
    "sync",
    "time",
    "signal"
]
